--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -390,6 +390,13 @@ html, body {
     font-size: 10px;
   }
 
+  h4 {
+    margin-top: 0;
+    code {
+      font-size: 13px;
+    }
+  }
+
   hr {
     margin: 2em 0;
     border-top: 2px solid $examples-bg;
