Adjust colors & font weights

--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -24,7 +24,9 @@ under the License.
 // BACKGROUND COLORS
 ////////////////////
 $nav-bg: #341f3d !default;
+$nav-bg-gradient: linear-gradient(135deg, #451958 0%,#2c1439 100%);
 $examples-bg: #341f3d !default;
+$examples-bg-gradient: linear-gradient(135deg, #30133e 0%,#52305f 100%);
 $code-bg: #1E2224 !default;
 $code-annotation-bg: #191D1F !default;
 $nav-subitem-bg: #1E2224 !default;
@@ -34,7 +36,7 @@ $lang-select-border: #000 !default;
 $lang-select-bg: #1E2224 !default;
 $lang-select-active-bg: $examples-bg !default; // feel free to change this to blue or something
 $lang-select-pressed-bg: #111 !default; // color of language tab bg when mouse is pressed
-$main-bg: #F3F7F9 !default;
+$main-bg: #fafafa !default;
 $aside-notice-bg: #8fbcd4 !default;
 $aside-warning-bg: #c97a7e !default;
 $aside-success-bg: #6ac174 !default;
@@ -44,12 +46,14 @@ $search-notice-bg: #c97a7e !default;
 // TEXT COLORS
 ////////////////////
 $main-text: #333 !default; // main content text color
-$nav-text: #fff !default;
-$nav-active-text: #fff !default;
-$nav-active-parent-text: #fff !default; // parent links of the current section
+$nav-text: #f6f2f7 !default;
+$nav-active-text: #f6f2f7 !default;
+$nav-active-parent-text: #f6f2f7 !default; // parent links of the current section
 $lang-select-text: #fff !default; // color of unselected language tab text
 $lang-select-active-text: #fff !default; // color of selected language tab text
 $lang-select-pressed-text: #fff !default; // color of language tab text when mouse is pressed
+$link-text: #55ccff !default;
+$link-visited-text: #8c2cb5 !default;
 
 
 // SIZES
@@ -88,6 +92,7 @@ $phone-width: $tablet-width - $nav-width !default; // min width before reverting
 
 // OTHER
 ////////////////////
+$nav-right-border-color: #711d95;
 $nav-footer-border-color: #666 !default;
 $search-box-border-color: #666 !default;
 
